[package]
name = "rshooks-api"
version = "0.6.0"
edition = "2021"
authors = ["tequ <git@tequ.dev>"]
description = "XRP Ledger Hooks API for Rust"
license = "MIT"
repository = "https://github.com/tequdev/rshooks-api/"
readme = "README.md"
keywords = ["xrp", "xrpl", "hook", "hooks", "cryptocurrencies"]
categories = ["wasm", "no-std", "cryptography::cryptocurrencies"]

[dependencies]
byteorder = { version = "1", default-features = false }
